# vol-range-momentum

./: .flake8  .gitignore  .pre-commit-config.yaml  docker-compose.yml  notes.py  readme.md  trading.Dockerfile
cio/: pyproject.toml
cio/cio/: constants.py  data_loader.py  data_writer.py
core/: pyproject.toml
core/core/: analytics.py  linear_regression.py  stationarity.py  strategy.py  visualizations.py
etl/: pyproject.toml
etl/configs/: update_historical_bnb.json  update_historical_qqq.json  update_historical_spy.json
etl/etl/: script.py  update_historical_data.py  update_historical_data_bnb.py
trading/: pyproject.toml
trading/configs/: intraday_momentum_spy.json
trading/trading/: consts.py  intraday_momentum.py  strategy.py  volatility_range_momentum.py
