[tool.poetry]
name = "cio"
version = "0.1.0"
description = "Data loaders and Writers"
authors = ["pranesh <praneshbalekai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
external = { path = "../external", develop = true }
ibapi = "^9.81.1.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120