[tool.poetry]
name = "etl"
version = "0.1.0"
description = "Scripts for some regular etl jobs to load data"
authors = ["pranesh <praneshbalekai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cio = { path = "../cio/", develop=true }
external = { path = "../external/", develop=true }
dynaconf = "^3.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
